src/styles/globals.scss
@use './colors' as *;
@use "./variables" as *;

html {
  scrollbar-color: rgba(255, 255, 255, .3) transparent;
  color-scheme: dark;
  scrollbar-gutter: stable;
}

body {
  font-family: ui-sans-serif, system-ui, sans-serif;
  background-color: var(--background);

  &.noScroll {
    overflow: hidden;
  }
}

body::selection {
  background: #fde69a;
  color: #212121;
  text-shadow: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

@media (prefers-reduced-motion: reduce) {
  * {
    animation: none !important;
    transition: none !important;
  }
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

label {
  cursor: pointer;
}

button {
  font-family: ui-sans-serif, system-ui, sans-serif;
  cursor: pointer;
}

main {
  min-height: 100dvh;
  width: 100%;
  margin: 0 auto;
  padding: 128px 16px 0 16px;
}

.container {
  max-width: 1279px;
  width: 100%;
  margin: 0 auto;
}

.red {
  color: #da0120;
}

.green {
  color: #00b906;
}

.yellow {
  color: #e8ff19;
}

.blue {
  color: #170bdb;
}

.cyan {
  color: #23c2c6;
}

.magenta {
  color: #e201db;
}

.white {
  color: #eee;
}

.gray {
  color: #757575;
}

.black {
  color: #000;
}

.purple {
  color: #8080FE;
}

.flip {
  rotate: 180deg;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

